# BobbyZZY_Chat

./: .gitignore  README.md
BobbyZZY_Chat/fronted/BobbyZZY_Chat/: ChatDialog.ui  HttpMgr.h  ResetDialog.cpp  Singleton.h  TcpMgr.h  TimerBtn.h  config.ini  global.cpp  global.h  logindialog.cpp  logindialog.ui  mainwindow.h  mainwindow.ui
BobbyZZY_Chat/fronted/BobbyZZY_Chat/style/: stylesheet.qss
BobbyZZY_Chat/server/ChatServer/: AsioIOContextPool.h  CServer.cpp  ChatServer.cpp  ConfigMgr.h  MysqlDao.h  MysqlMgr.cpp  Singleton.h  StatusGrpcClient.cpp  StatusGrpcClient.h  const.h
BobbyZZY_Chat/server/GateServer/: CServer.cpp  CServer.h  GateServer.cpp  HttpConnection.cpp  HttpConnection.h  MysqlDao.cpp  MysqlDao.h  StatusGrpcClient.cpp  StatusGrpcClient.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  config.ini  const.h  message.proto
BobbyZZY_Chat/server/StatusServer/: MysqlMgr.h  RedisMgr.h  StatusServiceImpl.cpp  StatusServiceImpl.h  const.h
BobbyZZY_Chat/server/VerifyServer/: const.js  package-lock.json
fronted/BobbyZZY_Chat/: CMakeLists.txt  ChatDialog.cpp  ChatDialog.h  HttpMgr.cpp  ResetDialog.h  ResetDialog.ui  TcpMgr.cpp  TimerBtn.cpp  UserMgr.cpp  UserMgr.h  logindialog.h  main.cpp  mainwindow.cpp  registerdialog.cpp  registerdialog.h  registerdialog.ui  res.qrc
fronted/BobbyZZY_Chat/style/: stylesheet.qss
server/ChatServer/: CServer.h  CSession.cpp  CSession.h  ConfigMgr.cpp  LogicSystem.cpp  LogicSystem.h  MsgNode.cpp  MsgNode.h  MysqlDao.cpp  MysqlMgr.h  config.ini  message.pb.cc
server/GateServer/: AsioIOContextPool.cpp  AsioIOContextPool.h  CMakeLists.txt  CServer.cpp  GateServer.cpp  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  RedisMgr.cpp  Singleton.h  StatusGrpcClient.cpp  StatusGrpcClient.h  VerifyGrpcClient.cpp  message.pb.cc  message.pb.h
server/StatusServer/: MysqlDao.cpp  StatusServer.cpp
server/VerifyServer/: config.json  message.proto  package.json  proto.js  redis.js  server.js
